# buf_sized_derive

./: Cargo.toml  README.md
src/: lib.rs
